--- a/src/main/webapp/WEB-INF/layouts/main.xhtml
+++ b/src/main/webapp/WEB-INF/layouts/main.xhtml
@@ -20,7 +20,7 @@
             <h:graphicImage
                     value="/resources/img/tienda-online.png"
                     alt="Online Products"
-                    style="width: 70px; height: auto; padding-right: 10px;" />
+                    style="width: 70px; height: auto; padding-right: 10px;"/>
 
             <a class="navbar-brand" href="#">Online Products</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -41,6 +41,10 @@
     </nav>
 
     <div class="container">
+
+        <h:messages globalOnly="true" styleClass="alert" errorClass="alert alert-danger"
+                    infoClass="alert alert-success" warnClass="alert alert-warning"/>
+
         <ui:insert name="content"/>
         <hr/>
         <footer style="clear: both;">
@@ -48,7 +52,7 @@
             <h:graphicImage
                     value="/resources/img/jakartaee.png"
                     alt="logo jakarta"
-                    style="width: 90px; height: auto;" />
+                    style="width: 90px; height: auto;"/>
             <p>Developed by Jose Alvarez</p>
             <h:outputScript name="js/bootstrap.bundle.min.js"/>
             <ui:insert name="js"/>
