--- a/src/main/webapp/WEB-INF/layouts/main.xhtml
+++ b/src/main/webapp/WEB-INF/layouts/main.xhtml
@@ -1,78 +1,58 @@
-<?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
 <html lang="#{lenuajeController.locale}">
 <f:view xmlns="http://www.w3.org/1999/xhtml"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
+        xmlns:p="http://primefaces.org/ui"
         locale="#{lenguajeController.locale}">
 
 
     <h:head>
         <meta charset="UTF-8"/>
         <title>#{titulo}</title>
-        <h:outputStylesheet name="css/bootstrap.min.css"/>
+        <h:outputStylesheet library="webjars" name="primeflex/2.0.0/primeflex.min.css"/>
         <ui:insert name="head"/>
     </h:head>
 
     <h:body>
+        <p:card>
+            <h:form>
+                <p:menubar>
+                    <p:menuitem value="#{msg['navbar.texto.inicio']}" outcome="index" icon="pi pi-fw pi-home"/>
+                    <p:menuitem value="#{msg['navbar.texto.crear']}" outcome="form" icon="pi pi-fw pi-plus"/>
+                    <p:menuitem icon="pi pi-fw pi-flag">
 
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
+                        <p:selectOneMenu value="#{lenguajeController.lenguaje}"
+                                         valueChangeListener="#{lenguajeController.seleccionar}"
+                                         onchange="submit()">
+                            <f:selectItem itemLabel="#{msg['navbar.texto.cambiar.lenguaje']}" itemValue="es"/>
+                            <f:selectItems value="#{lenguajeController.lenguajesSoportados}"/>
+                        </p:selectOneMenu>
 
-                <h:graphicImage
-                        value="/resources/img/tienda-online.png"
-                        alt="Online Products"
-                        style="width: 70px; height: auto; padding-right: 10px;"/>
-
-                <a class="navbar-brand" href="#">Online Products</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <h:link outcome="index" value="#{msg['navbar.texto.inicio']}" class="nav-link active"/>
-                        </li>
-                        <li class="nav-item">
-                            <h:link outcome="form" value="#{msg['navbar.texto.crear']}" class="nav-link"/>
-                        </li>
-                        <li class="nav-item">
-                            <h:form>
-                                <h:selectOneMenu value="#{lenguajeController.lenguaje}" valueChangeListener="#{lenguajeController.seleccionar}"
-                                onchange="submit()" class="form-select">
-                                    <f:selectItem itemLabel="#{msg['navbar.texto.cambiar.lenguaje']}" itemValue="es"/>
-                                    <f:selectItems value="#{lenguajeController.lenguajesSoportados}"/>
-                                </h:selectOneMenu>
-                            </h:form>
-                        </li>
-                    </ul>
-                </div>
+                    </p:menuitem>
+                </p:menubar>
+            </h:form>
+            <div class="p-mb-2">
+                <p:messages globalOnly="true" closable="true"/>
+                <ui:insert name="content"/>
             </div>
-        </nav>
 
-        <div class="container">
+            <p:divider/>
+            <div class="p-mb-2">
+                <footer style="clear: both;">
 
-            <h:messages globalOnly="true" styleClass="alert" errorClass="alert alert-danger"
-                        infoClass="alert alert-success" warnClass="alert alert-warning"/>
-
-            <ui:insert name="content"/>
-            <hr/>
-            <footer style="clear: both;">
-
-                <h:graphicImage
-                        value="/resources/img/jakartaee.png"
-                        alt="logo jakarta"
-                        style="width: 90px; height: auto;"/>
-                <p>
-                    <h:outputText value="#{msg['footer.texto.autor']}"/>
-                </p>
-                <h:outputScript name="js/bootstrap.bundle.min.js"/>
-                <ui:insert name="js"/>
-            </footer>
-        </div>
-
+                    <h:graphicImage
+                            value="/resources/img/jakartaee.png"
+                            alt="logo jakarta"
+                            style="width: 90px; height: auto;"/>
+                    <p>
+                        <h:outputText value="#{msg['footer.texto.autor']}"/>
+                    </p>
+                    <ui:insert name="js"/>
+                </footer>
+            </div>
+        </p:card>
     </h:body>
 </f:view>
 </html>
