Implementacion de seguridad JAAS y pagina JSF de form para Login y manejo de error en login

--- a/src/main/webapp/WEB-INF/layouts/main.xhtml
+++ b/src/main/webapp/WEB-INF/layouts/main.xhtml
@@ -20,9 +20,9 @@
             <h:form>
                 <p:menubar>
                     <p:menuitem value="#{msg['navbar.texto.inicio']}" outcome="index" icon="pi pi-fw pi-home"/>
-                    <p:menuitem value="#{msg['navbar.texto.crear']}" onclick="PF('dialogForm').show()"
+                    <p:menuitem rendered="#{p:ifGranted('ADMIN')}" value="#{msg['navbar.texto.crear']}" onclick="PF('dialogForm').show()"
                                 icon="pi pi-fw pi-plus"/>
-                    <p:menuitem icon="pi pi-fw pi-flag">
+                    <p:menuitem icon="pi pi-fw pi-flag" rendered="#{p:ifAnyGranted('ADMIN,USER')}">
 
                         <p:selectOneMenu value="#{lenguajeController.lenguaje}"
                                          valueChangeListener="#{lenguajeController.seleccionar}"
@@ -38,6 +38,7 @@
                 <p:messages globalOnly="true" closable="true">
                     <p:autoUpdate/>
                 </p:messages>
+                <h:outputText value="Bienvenido: #{p:userPrincipal()}" rendered="#{not empty p:userPrincipal()}"/>
                 <ui:insert name="content"/>
             </div>
 
@@ -46,9 +47,9 @@
                 <footer style="clear: both;">
 
                     <h:graphicImage
-                            value="/resources/img/jakartaee.png"
+                            value="/resources/img/jee.png"
                             alt="logo jakarta"
-                            style="width: 90px; height: auto;"/>
+                            style="width: 135px; height: auto;"/>
                     <p>
                         <h:outputText value="#{msg['footer.texto.autor']}"/>
                     </p>
