--- a/src/main/webapp/WEB-INF/layouts/main.xhtml
+++ b/src/main/webapp/WEB-INF/layouts/main.xhtml
@@ -17,6 +17,9 @@
         <title>#{titulo}</title>
         <!-- Includes a PrimeFlex stylesheet from a webjar library -->
         <h:outputStylesheet library="webjars" name="primeflex/3.3.1/primeflex.min.css" />
+        <h:outputScript library="primefaces" name="jquery/jquery.js"/>
+        <h:outputScript library="primefaces" name="primefaces.js"/>
+        <h:outputStylesheet library="primefaces" name="primefaces.css"/>
         <ui:insert name="head"/>
     </h:head>
 
@@ -36,14 +39,14 @@
 
                     <!-- Dropdown menu for language selection, visible to ADMIN or USER roles -->
                     <p:menuitem icon="pi pi-fw pi-flag" rendered="#{p:ifAnyGranted('ADMIN,USER')}">
-                        <p:submenu value="#{lenguajeController.lenguaje}"
+                        <p:selectOneMenu value="#{lenguajeController.lenguaje}"
                                          valueChangeListener="#{lenguajeController.seleccionar}"
                                          onchange="submit()">
 
                             <!-- Dropdown for selecting a language with a change listener -->
                             <f:selectItem itemLabel="#{msg['navbar.texto.cambiar.lenguaje']}" itemValue="es"/>
                             <f:selectItems value="#{lenguajeController.lenguajesSoportados}"/>
-                        </p:submenu>
+                        </p:selectOneMenu>
 
                     </p:menuitem>
                     <!-- Login menu item, visible only if no user is logged in -->
